--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,1 @@
-body{padding:32px;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}.new-styles{font-size:16px;font-style:italic;color:red}.otherStyles{font-size:17px;font-style:bold;color:orange}
+body{padding:32px;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}.new-styles{font-size:16px;font-style:italic;color:red}.otherStyles{font-size:17px;font-style:bold;color:orange}.eventStyles{font-size:14px;font-style:bold;color:green}
