--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -22,3 +22,18 @@ font-size: 14px;
 font-style: bold;
 color: green;
 }
+
+.twowayStyles{
+font-size: 14px;
+font-style: bold;
+color: blue;
+}
+
+.my-btn {
+  background-color: red;
+  color: white;
+  border-color: grey;
+  width: 80px;
+  height: 35px;
+  border-radius: 25%;
+}
