--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -37,3 +37,28 @@ color: blue;
   height: 35px;
   border-radius: 25%;
 }
+
+.child-component{
+
+  border: 2px solid black;
+  padding: 10px;
+  background-color: #ccc;
+
+
+}
+
+.parent-component{
+
+  border: 3px solid #cc0000;
+  padding: 5px;
+  background-color: #eee;
+
+
+}
+
+.code{
+  font-family: 'Courier New';
+  font-size: 11px;
+  font-style: bold;
+
+}
