finish setup for input-component

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -79,3 +79,34 @@ color: #7A67EE;
 font-family: 'Tahoma';
 
 }
+
+/*
+INPUT COMPONENT 
+*/
+
+.container {
+  padding: 16px;
+  border: 4px solid #215E21;
+  background-color: #CFDBC5;
+  margin-bottom: 32px;
+}
+
+button {
+
+padding: 5px 9px;
+border: 3px solid #ccc;
+background-color: white;
+border-radius: 5px;
+cursor: default;
+
+
+}
+
+button:not([disabled]):hover {
+  background-color: salmon;
+  color:white;
+}
+
+.highlight {
+  font-weight: bold;
+}
