Create dataService for getting random GOT house names and adding them

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -144,3 +144,35 @@ button:not([disabled]):hover {
 .highlight {
   font-weight: bold;
 }
+
+// S E R V I C E S
+
+// Component1
+
+.component-1{
+
+  border: 1px solid #cc0000;
+  padding: 5px;
+  background-color: #eee;
+
+
+}
+
+.calculator-data{
+
+  border: 2px solid #aa6543;
+  padding: 5px;
+  background-color: purple;
+
+
+
+
+}
+
+.house-data{
+  border: 1px solid #cc8000;
+  padding: 5px;
+  background-color: yellow;
+  height: 168px;
+
+}
